<resources>
    <string name="app_name">Filmowy</string>

    <string name="article_title">Artykuł</string>
    <string name="cinema_title">Repertuar kin</string>
    <string name="film_title">Film</string>
    <string name="games_title">Gry</string>
    <string name="movies_title">Filmy</string>
    <string name="episodes_fragment">Odcinki</string>
    <string name="news_title">Newsy</string>
    <string name="rankings_title">Rankingi</string>
    <string name="person_title">Osoba</string>
    <string name="profile_title">Profil</string>
    <string name="series_title">Seriale</string>
    <string name="tv_title">Program TV</string>

    <plurals name="film_votes">
        <item quantity="one">%d\nocena</item>
        <item quantity="two">%d\noceny</item>
        <item quantity="few">%d\nocen</item>
        <item quantity="many">%d\nocen</item>
        <item quantity="zero">%d\nocen</item>
    </plurals>
    <string name="forum_button">Zobacz wszystkie tematy</string>

    <string name="retry">Ponów</string>
    <string name="open_in_browser">Otwórz w przeglądarce</string>
    <string name="search_hint">Szukaj filmu, serialu…</string>
    <string name="search_title">Szukaj</string>
    <string name="my_title">Mój Filmweb</string>
    <string name="login_in">Zaloguj się</string>
    <string name="login_in_facebook">Zaloguj z Facebookiem</string>

    <string name="login_header_default">Zaloguj się używając konta Filmweb</string>
    <string name="login_nickname_hint">Nazwa użytkownika</string>
    <string name="login_password_hint">Hasło</string>
    <string name="forum_title">Forum</string>
    <string name="thread_title">Wątek</string>
    <string name="watched">Obejrzany</string>
    <string name="vote">Oceń</string>
    <string name="user_rating">Twoja ocena w gwiazdkach to: %d</string>
</resources>
